--- a/css/style.css
+++ b/css/style.css
@@ -853,7 +853,7 @@ a:focus {
 .review .content-inner {
     position: relative;
     padding: 60px 30px;
-    background: url(../img/quote.png) right bottom no-repeat;
+    background: url() right bottom no-repeat;
 }
 
 .review .review-text p {
